--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,9 +11,11 @@
         <header class="page-header">
           <div class="container">
               <h1><a href="/">Django Girls Blog</a></h1>
+              <hr>
           </div>
         </header>
         <main class="container">
+            <h1>Data Flows here...</h1>
             <div class="row">
                 <div class="col">
                 {% block content %}
