--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,7 +4,7 @@
     {% for post in posts %}
         <article class="post">
             
-            <h2>{{ post }}</h2>
+            <h2>{{ post }}: {{ post }}</h2>
             
         </article>
     {% endfor %}
